<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addExpenseContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/botton_sheet_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LayoutActivity">

        <Button
            android:id="@+id/btnCancelAction"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_close"
            app:layout_constraintBottom_toTopOf="@+id/ingressUser"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/ingressUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="left"
            android:lines="2"
            android:minLines="2"
            android:singleLine="false"
            android:text="@string/dialogExpenses"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="169dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_assignment"
            android:drawablePadding="10dp"
            android:drawableTint="@color/primaryColor"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/descriptionExpenses"
            android:inputType="text"
            android:maxLength="50"
            android:padding="15dp"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingressUser" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/memberInput"
            android:layout_width="169dp"
            android:layout_height="61dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:drawableTint="@color/primaryColor"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/selectMember"
            android:inputType="text"
            android:maxLength="50"
            android:padding="15dp"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingressUser" />
        <EditText
            android:id="@+id/expenditureInput"
            android:layout_width="169dp"
            android:layout_height="61dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_monetization_on"
            android:drawablePadding="10dp"
            android:drawableTint="@color/primaryColor"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/expenditure"
            android:inputType="text"
            android:maxLength="50"
            android:padding="15dp"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionInput" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/whomInput"
            android:layout_width="169dp"
            android:layout_height="61dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:drawableTint="@color/primaryColor"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/forWhom"
            android:inputType="text"
            android:maxLength="50"
            android:padding="15dp"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memberInput" />


        <Button
            android:id="@+id/btnCreateExpense"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/montserrat_regular"
            android:padding="1dp"
            android:text="@string/createExpenses"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenditureInput" />
        <Button
            android:id="@+id/btnCancelExpense"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/montserrat_regular"
            android:padding="1dp"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whomInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>