<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_expenses"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_custom"
        android:drawableLeft="@drawable/ic_money"
        android:fontFamily="@font/montserrat_regular"
        android:paddingLeft="10dp"
        android:text="@string/btn_expenses"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_shoppingList"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/montserrat_regular"
        android:paddingLeft="10dp"
        android:text="@string/btn_shopping_list"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_expenses"
        android:drawableLeft="@drawable/ic_shop"/>

    <ListView
        android:id="@+id/taskList"
        android:layout_width="357dp"
        android:layout_height="411dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_shoppingList"
        android:background="@drawable/border_list"/>


    <Button
        android:id="@+id/btn_addTask"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/montserrat_regular"
        android:padding="1dp"
        android:text="@string/btn_add_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskList" />



</androidx.constraintlayout.widget.ConstraintLayout>