<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/botton_sheet_background"
    android:id="@+id/changePass">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ip_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="1dp"
        android:padding="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:errorTextAppearance="@style/error_appearance"
        app:helperText="@string/helperRequired"
        app:helperTextTextColor="@color/primaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/ip_newpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_lock_password"
        app:startIconTint="@color/primaryColor">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/oldpassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/fieldTextColor"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ip_newpassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="36dp"
        android:padding="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:errorTextAppearance="@style/error_appearance"
        app:helperText="@string/helperRequired"
        app:helperTextTextColor="@color/primaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_lock_password"
        app:startIconTint="@color/primaryColor">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_newpassword"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/fieldTextColor"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/montserrat_regular"
        android:padding="1dp"
        android:text="@string/addButton"
        android:textAllCaps="false"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ip_newpassword" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/btn_error"
        android:fontFamily="@font/montserrat_regular"
        android:padding="1dp"
        android:text="@string/Cancel"
        android:textAllCaps="false"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/ip_newpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>